# backend-main

./: .env.template  Cargo.toml  README.md  diesel.toml
src/: main.rs
src/core/: message.rs  prelude.rs
src/orm/: db.rs  mod.rs  schema.rs
src/orm/migrations/2023-04-01-010414_create_message/: down.sql  up.sql
src/orm/migrations/2023-04-04-130032_change_created_at_timefield/: down.sql  up.sql
src/orm/models/: message.rs
src/orm/tables/: message.rs
src/routes/: mod.rs
src/sql/: fill-answers.sql  fill.sql
src/test/core/: mod.rs
src/use_cases/: mod.rs
src/use_cases/dto/: mod.rs
