[package]
name = "fromu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
actix-web = "4"
actix-cors = "0.6.4"

[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
